--- a/journey/complete/elements.html
+++ b/journey/complete/elements.html
@@ -12,12 +12,12 @@ title: 'Elements'
 </td>
 </tr>
 </table>
-<p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Organization"}</p>
+<p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Customization"}</p>
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
 <a href="#" class="older"> </a>
-<a href="elements-customization.html" class="newer">Next >></a>
+<a href="#" class="newer"> </a>
 </div>
 
 <table width="100%" border="0">
