Updating journey/complete/timeframes.html via Laneworks CMS Publish

--- a/journey/complete/timeframes.html
+++ b/journey/complete/timeframes.html
@@ -16,7 +16,7 @@ title: 'Timeframes'
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="elements-customization.html" class="older"><< Prev</a>
+<a href="#" class="older"> </a>
 <a href="timeframes-minutes.html" class="newer">Next >></a>
 </div>
 
