Updating journey/complete/metrics.html via Laneworks CMS Publish

--- a/journey/complete/metrics.html
+++ b/journey/complete/metrics.html
@@ -16,7 +16,7 @@ title: 'Metrics'
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="timeframes-annually.html" class="older"><< Prev</a>
+<a href="#" class="older"> </a>
 <a href="metrics-calls.html" class="newer">Next >></a>
 </div>
 
