--- a/journey/complete/geo.html
+++ b/journey/complete/geo.html
@@ -16,7 +16,7 @@ title: 'Geo'
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="metrics-price-per.html" class="older"><< Prev</a>
+<a href="#" class="older"> </a>
 <a href="geo-country.html" class="newer">Next >></a>
 </div>
 
