--- a/journey/complete/metrics.html
+++ b/journey/complete/metrics.html
@@ -12,12 +12,12 @@ title: 'Metrics'
 </td>
 </tr>
 </table>
-<p style="font-size: 22px; font-weight: bold;" align="center">{"Metrics":"Zone"}</p>
+<p style="font-size: 22px; font-weight: bold;" align="center">{"Metrics":"Encryption"}</p>
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
 <a href="#" class="older"> </a>
-<a href="metrics-memory.html" class="newer">Next >></a>
+<a href="metrics-characters.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
