--- a/journey/complete/limits.html
+++ b/journey/complete/limits.html
@@ -16,7 +16,7 @@ title: 'Limits'
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="geo-co-location.html" class="older"><< Prev</a>
+<a href="#" class="older"> </a>
 <a href="limits-inline.html" class="newer">Next >></a>
 </div>
 
