--- a/journey/complete/limits.html
+++ b/journey/complete/limits.html
@@ -12,12 +12,12 @@ title: 'Limits'
 </td>
 </tr>
 </table>
-<p style="font-size: 22px; font-weight: bold;" align="center">{"Limits":"Inline"}</p>
+<p style="font-size: 22px; font-weight: bold;" align="center">{"Limits":"Range"}</p>
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
 <a href="#" class="older"> </a>
-<a href="limits-range.html" class="newer">Next >></a>
+<a href="limits-resources.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
