--- a/journey/complete/limits.html
+++ b/journey/complete/limits.html
@@ -12,12 +12,12 @@ title: 'Limits'
 </td>
 </tr>
 </table>
-<p style="font-size: 22px; font-weight: bold;" align="center">{"Limits":"Service Level Agreement (SLA)"}</p>
+<p style="font-size: 22px; font-weight: bold;" align="center">{"Limits":"API"}</p>
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
 <a href="#" class="older"> </a>
-<a href="limits-api.html" class="newer">Next >></a>
+<a href="#" class="newer"> </a>
 </div>
 
 <table width="100%" border="0">
