--- a/journey/complete/resources.html
+++ b/journey/complete/resources.html
@@ -16,7 +16,7 @@ title: 'Resources'
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="limits-api.html" class="older"><< Prev</a>
+<a href="#" class="older"> </a>
 <a href="resources-verbs.html" class="newer">Next >></a>
 </div>
 
