--- a/journey/complete/resources.html
+++ b/journey/complete/resources.html
@@ -12,12 +12,12 @@ title: 'Resources'
 </td>
 </tr>
 </table>
-<p style="font-size: 22px; font-weight: bold;" align="center">{"Resources":"Verbs"}</p>
+<p style="font-size: 22px; font-weight: bold;" align="center">{"Resources":"Endpoints"}</p>
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
 <a href="#" class="older"> </a>
-<a href="#" class="newer"> </a>
+<a href="resources-verbs.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
