--- a/journey/complete/extensions.html
+++ b/journey/complete/extensions.html
@@ -12,12 +12,12 @@ title: 'Extensions'
 </td>
 </tr>
 </table>
-<p style="font-size: 22px; font-weight: bold;" align="center">{"Extensions":"Connectors"}</p>
+<p style="font-size: 22px; font-weight: bold;" align="center">{"Extensions":"Add-Ons"}</p>
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
 <a href="#" class="older"> </a>
-<a href="#" class="newer"> </a>
+<a href="extensions-connectors.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
