--- a/journey/complete/timeframes.html
+++ b/journey/complete/timeframes.html
@@ -12,12 +12,12 @@ title: 'Timeframes'
 </td>
 </tr>
 </table>
-<p style="font-size: 22px; font-weight: bold;" align="center">{"Timeframes":"Daily"}</p>
+<p style="font-size: 22px; font-weight: bold;" align="center">{"Timeframes":"Quarterly"}</p>
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
 <a href="#" class="older"> </a>
-<a href="timeframes-weekly.html" class="newer">Next >></a>
+<a href="timeframes-annually.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
