Updating journey/complete/elements-private.html via Laneworks CMS Publish

--- a/journey/complete/elements-private.html
+++ b/journey/complete/elements-private.html
@@ -23,8 +23,8 @@ title: 'Private'
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="elements-overview.html" class="older"><< Prev</a>
-<a href="timeframes.html" class="newer">Next >></a>
+<a href="#" class="older"> </a>
+<a href="elements-public.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
