Updating journey/complete/timeframes-minutes.html via Laneworks CMS Publish

--- a/journey/complete/timeframes-minutes.html
+++ b/journey/complete/timeframes-minutes.html
@@ -23,8 +23,8 @@ title: 'Minutes'
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="timeframes-seconds.html" class="older"><< Prev</a>
-<a href="metrics.html" class="newer">Next >></a>
+<a href="elements-customization.html" class="older"><< Prev</a>
+<a href="timeframes-hourly.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
