--- a/journey/complete/metrics-calls.html
+++ b/journey/complete/metrics-calls.html
@@ -23,8 +23,8 @@ title: 'Calls'
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="metrics-access.html" class="older"><< Prev</a>
-<a href="geo.html" class="newer">Next >></a>
+<a href="timeframes-annually.html" class="older"><< Prev</a>
+<a href="metrics-value.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
