--- a/journey/complete/metrics-count.html
+++ b/journey/complete/metrics-count.html
@@ -24,7 +24,7 @@ title: 'Count'
 <!-- Pagination links -->
 <div class="pagination">
 <a href="metrics-transaction.html" class="older"><< Prev</a>
-<a href="geo.html" class="newer">Next >></a>
+<a href="metrics-value.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
