--- a/journey/complete/geo.html
+++ b/journey/complete/geo.html
@@ -12,12 +12,12 @@ title: 'Geo'
 </td>
 </tr>
 </table>
-<p style="font-size: 22px; font-weight: bold;" align="center">{"Geo":"Co-Location"}</p>
+<p style="font-size: 22px; font-weight: bold;" align="center">{"Geo":"Overview"}</p>
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="#" class="older"> </a>
-<a href="#" class="newer"> </a>
+<a href="metrics-price-per.html" class="older"><< Prev</a>
+<a href="geo-country.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
