--- a/journey/complete/geo-country.html
+++ b/journey/complete/geo-country.html
@@ -23,8 +23,8 @@ title: 'Country'
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="geo-overview.html" class="older"><< Prev</a>
-<a href="limits.html" class="newer">Next >></a>
+<a href="metrics-price-per.html" class="older"><< Prev</a>
+<a href="geo-region.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
