--- a/journey/complete/limits.html
+++ b/journey/complete/limits.html
@@ -12,12 +12,12 @@ title: 'Limits'
 </td>
 </tr>
 </table>
-<p style="font-size: 22px; font-weight: bold;" align="center">{"Limits":"API"}</p>
+<p style="font-size: 22px; font-weight: bold;" align="center">{"Limits":"Overview"}</p>
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="#" class="older"> </a>
-<a href="#" class="newer"> </a>
+<a href="geo-co-location.html" class="older"><< Prev</a>
+<a href="limits-inline.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
