--- a/journey/complete/limits-inline.html
+++ b/journey/complete/limits-inline.html
@@ -23,8 +23,8 @@ title: 'Inline'
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="limits-overview.html" class="older"><< Prev</a>
-<a href="resources.html" class="newer">Next >></a>
+<a href="geo-co-location.html" class="older"><< Prev</a>
+<a href="limits-range.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
