--- a/journey/complete/limits-range.html
+++ b/journey/complete/limits-range.html
@@ -24,7 +24,7 @@ title: 'Range'
 <!-- Pagination links -->
 <div class="pagination">
 <a href="limits-inline.html" class="older"><< Prev</a>
-<a href="resources.html" class="newer">Next >></a>
+<a href="limits-range.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
