Updating journey/complete/extensions.html via Laneworks CMS Publish

--- a/journey/complete/extensions.html
+++ b/journey/complete/extensions.html
@@ -16,7 +16,7 @@ title: 'Extensions'
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="#" class="older"> </a>
+<a href="resources-verbs.html" class="older"><< Prev</a>
 <a href="extensions-connectors.html" class="newer">Next >></a>
 </div>
 
