Updating journey/complete/extensions-connectors.html via Laneworks CMS Publish

--- a/journey/complete/extensions-connectors.html
+++ b/journey/complete/extensions-connectors.html
@@ -23,8 +23,8 @@ title: 'Connectors'
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="extensions-add-ons.html" class="older"><< Prev</a>
-<a href="extensions-connectors.html" class="newer">Next >></a>
+<a href="resources-verbs.html" class="older"><< Prev</a>
+<a href="#" class="newer"> </a>
 </div>
 
 <table width="100%" border="0">
