Updating journey/complete/timeframes-minutes.html via Laneworks CMS Publish

--- a/journey/complete/timeframes-minutes.html
+++ b/journey/complete/timeframes-minutes.html
@@ -23,7 +23,7 @@ title: 'Minutes'
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="elements-customization.html" class="older"><< Prev</a>
+<a href="timeframes.html" class="older"><< Prev</a>
 <a href="timeframes-hourly.html" class="newer">Next >></a>
 </div>
 
