--- a/journey/complete/resources-verbs.html
+++ b/journey/complete/resources-verbs.html
@@ -23,7 +23,7 @@ title: 'Verbs'
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="limits-api.html" class="older"><< Prev</a>
+<a href="resources.html" class="older"><< Prev</a>
 <a href="#" class="newer"> </a>
 </div>
 
