--- a/journey/complete/extensions-connectors.html
+++ b/journey/complete/extensions-connectors.html
@@ -23,7 +23,7 @@ title: 'Connectors'
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="resources-verbs.html" class="older"><< Prev</a>
+<a href="extensions.html" class="older"><< Prev</a>
 <a href="#" class="newer"> </a>
 </div>
 
