--- a/journey/complete/geo-country.html
+++ b/journey/complete/geo-country.html
@@ -23,7 +23,7 @@ title: 'Country'
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="geo.html" class="older"><< Prev</a>
+<a href="geo-overview.html" class="older"><< Prev</a>
 <a href="limits.html" class="newer">Next >></a>
 </div>
 
