--- a/journey/complete/geo-overview.html
+++ b/journey/complete/geo-overview.html
@@ -23,7 +23,7 @@ title: 'Overview'
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="metrics-price-per.html" class="older"><< Prev</a>
+<a href="geo.html" class="older"><< Prev</a>
 <a href="limits.html" class="newer">Next >></a>
 </div>
 
