--- a/journey/complete/limits-overview.html
+++ b/journey/complete/limits-overview.html
@@ -23,7 +23,7 @@ title: 'Overview'
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="geo-co-location.html" class="older"><< Prev</a>
+<a href="limits.html" class="older"><< Prev</a>
 <a href="resources.html" class="newer">Next >></a>
 </div>
 
