--- a/journey/complete/limits-inline.html
+++ b/journey/complete/limits-inline.html
@@ -23,7 +23,7 @@ title: 'Inline'
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="limits.html" class="older"><< Prev</a>
+<a href="limits-overview.html" class="older"><< Prev</a>
 <a href="resources.html" class="newer">Next >></a>
 </div>
 
