--- a/journey/complete/metrics-migrations.html
+++ b/journey/complete/metrics-migrations.html
@@ -24,7 +24,7 @@ title: 'Migrations'
 <!-- Pagination links -->
 <div class="pagination">
 <a href="metrics-relationships.html" class="older"><< Prev</a>
-<a href="geo.html" class="newer">Next >></a>
+<a href="metrics-archives.html" class="newer">Next >></a>
 </div>
 
 <table width="100%" border="0">
