--- a/journey/index.html
+++ b/journey/index.html
@@ -3,8 +3,9 @@ layout: page
 title: 'Take a Journey - API Plan'
 ---
 
-<h3>Take an Journey Through My API Plan Research</h3>
-<p>I provide several ways to explore my research. My goal is to make as much of my research explorable for those getting started, as well as others who are ready for some more advanced planning concepts.</p>
+<h1>API Journey - API Plan</h1>
+<p><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-journey.png" align="right" width="200" style="padding: 15px;" /></p>
+<p>I provide several ways to explore my research, working to make as much of my research explorable for those getting started, as well as others who are ready for some more advanced planning concepts.</p>
 <p>You can explore by the level:</p>
 <ul>
   <li>Essentials</li>
