--- a/journey/complete/index.html
+++ b/journey/complete/index.html
@@ -13,18 +13,13 @@ title: 'Take a Journey - API Plan'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"API":"Journey"}</p>
-<p>Take a journey</p>
-<div style="padding: 5px 25px 5px 25px;">
-</ul>
-</ul>
-</ul>
-</ul>
-</ul>
-</div>
+<p>This is a journey through the building blocks of my API plan research. Everything here is gathered from the approach used by API providers across the space, as well as from the features offered by API service provides who help define the space.</p>
+<p>Throughout this journey I will be provided references to organizations, links, tools, questions, and APIs when I can to help you better understand and experience each stop along your API journey. I'm constantly adding to, and adjusting each stop along this research journey, so come back often.</p>
+
 <!-- Pagination links -->
 <div class="pagination">
 <a href="#" class="older"> </a>
-<a href="elements.html" class="newer">Next >></a>
+<a href="elements.html" class="newer">Begin Journey >></a>
 </div>
 
 <table width="100%" border="0">
