--- a/journey/index.html
+++ b/journey/index.html
@@ -5,8 +5,8 @@ title: 'Take a Journey - API Plan'
 
 <h1>API Journey - API Plan</h1>
 <p>I provide several ways to explore my research, working to make as much of my research explorable for those getting started, as well as others who are ready for some more advanced planning concepts.</p>
+p><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-journey.png" align="right" width="230" /></p>
 <p>You can explore by the level:</p>
-<p><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-journey.png" align="right" width="250" style="padding: 15px;" /></p>
 <ul>
   <li>Essentials</li>
   <li><a href="complete/index.html">Complete</a></li>
