--- a/journey/complete/index.html
+++ b/journey/complete/index.html
@@ -19,7 +19,7 @@ title: 'Take a Journey - API Plan'
 <!-- Pagination links -->
 <div class="pagination">
 <a href="#" class="older"> </a>
-<a href="elements.html" class="newer">Begin Journey >></a>
+<a href="elements.html" class="newer">Begin >></a>
 </div>
 
 <table width="100%" border="0">
