Updating journey/complete/elements.html via Laneworks CMS Publish

--- a/journey/complete/elements.html
+++ b/journey/complete/elements.html
@@ -16,7 +16,7 @@ title: 'Elements'
 <p>These are the key elements of API plans that I have gathered from across hundreds of API providers. These elements can be associated with specific plans that are available, but they do not have to, and I often use them to generally describe the plans, or perceived plans behind API operations.<br /><br />These are the elements you should be considering as part of your own plans. You do not have to use all of them, but hopefully they will help you better understand the possibilities when it comes to API planning.</p>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="#" class="older"> </a>
+<a href="index.html" class="older"><< Prev</a>
 <a href="elements-overview.html" class="newer">Next >></a>
 </div>
 
