--- a/journey/complete/elements-overview.html
+++ b/journey/complete/elements-overview.html
@@ -13,7 +13,7 @@ title: 'Overview'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Overview"}</p>
-<p>Provide a single landing page, available at a simple URL, with all the information about plans available as part of platform operations.</p>
+<p>Providing a single landing page, available at a simple URL, with all the information about plans available as part of platform operations. There may be more than one plan overview page available, for example one for SaaS side of offering, one for developers, and another possibly for enterprise or partner consumers.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
