Updating journey/complete/elements-private.html via Laneworks CMS Publish

--- a/journey/complete/elements-private.html
+++ b/journey/complete/elements-private.html
@@ -13,7 +13,7 @@ title: 'Private'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Private"}</p>
-<p>Is this plan a private one, available only to a limited audience.</p>
+<p>Is this plan a private one, available only to a limited audience? While the landing page, or overall portal might be publicly available, the API access itself requires approval, or existing account access before you can get more details. Private APIs are more common than public APIs, but you should think about the pros / cons of keeping things private.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
