--- a/journey/complete/elements-trial.html
+++ b/journey/complete/elements-trial.html
@@ -13,7 +13,7 @@ title: 'Trial'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Trial"}</p>
-<p>Is there a trial period that is limited by number of days, which may not apply to all plans.</p>
+<p>Is there a trial period that is limited by number of days, which may not apply to all plans. Not all audiences will respond to trial levels of access, but may work will with incentivizing higher levels of access, and API consumption. Refrain from requiring credit cards for trial levels of access, as it deters signup from abuse by other providers.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
