Updating journey/complete/elements-setup.html via Laneworks CMS Publish

--- a/journey/complete/elements-setup.html
+++ b/journey/complete/elements-setup.html
@@ -13,7 +13,7 @@ title: 'Setup'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Setup"}</p>
-<p>What are the costs associated with setting up and configuring an account for API access.			</p>
+<p>What are the costs associated with setting up and configuring an account for API access. Whatever time and resources are involved with setting up, or even perceived costs to end-users should be considered. Be careful making setup costs an obstacle for the on-boarding of consumers.	</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
