Updating journey/complete/elements-free.html via Laneworks CMS Publish

--- a/journey/complete/elements-free.html
+++ b/journey/complete/elements-free.html
@@ -13,7 +13,7 @@ title: 'Free'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Free"}</p>
-<p>Is this a free resource, or set of resources, something that may not apply to all plans.</p>
+<p>Is this a free resource, or set of resources, something that may not apply to all plans. Free should be considered even if it is part of a trial, demo, or just a limited level of access by time other metric. Free should be a way to incentivize users to higher level of access, and not damage potential revenue.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
