Updating journey/complete/elements-public.html via Laneworks CMS Publish

--- a/journey/complete/elements-public.html
+++ b/journey/complete/elements-public.html
@@ -13,7 +13,7 @@ title: 'Public'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Public"}</p>
-<p>Is this a publicly available API operation, something that may only apply to some plans.</p>
+<p>Is this a publicly available API operation, something that may only apply to some plans? While not all aspects of API operations will be 100% publicly available, there are some elements that anyone from the public can gain access to, even if it is rate limited in some way.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
