Updating journey/complete/elements-on-demand.html via Laneworks CMS Publish

--- a/journey/complete/elements-on-demand.html
+++ b/journey/complete/elements-on-demand.html
@@ -13,7 +13,7 @@ title: 'On-Demand'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"On-Demand"}</p>
-<p>The resource or set of resources can be deployed, and shut down on demand.</p>
+<p>The resource or set of resources can be deployed, and shut down on demand. Each resource can be evaluated for how long it should be available. With current approaches to virtualizations, it is easier to make API resources available on demand, similar to how Amazon has done with many of their cloud compute resources.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
