Updating journey/complete/elements-access.html via Laneworks CMS Publish

--- a/journey/complete/elements-access.html
+++ b/journey/complete/elements-access.html
@@ -13,7 +13,7 @@ title: 'Access'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Access"}</p>
-<p>Access should not be taken for granted, requiring you to request access, or elevated access levels.</p>
+<p>Access should not be taken for granted, requiring you to request access, or elevated access levels. While different levels of API access are common, it is also common to use API access itself as an element of planned API operations.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
