Updating journey/complete/elements-demo.html via Laneworks CMS Publish

--- a/journey/complete/elements-demo.html
+++ b/journey/complete/elements-demo.html
@@ -13,7 +13,7 @@ title: 'Demo'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Demo"}</p>
-<p>This resource or set of resources has a demo associated with it, which might apply to multiple plans.</p>
+<p>This resource or set of resources has a demonstration associated with it, which might apply to multiple plans. Consider the possibilities of offer live, or scheduled demos with overall platform operations, as well as individual planned levels of acess.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
