--- a/journey/complete/elements-subscription.html
+++ b/journey/complete/elements-subscription.html
@@ -13,7 +13,7 @@ title: 'Subscription'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Subscription"}</p>
-<p>There is a regular, recurring element to accessing a resource, as part of a larger subscription part of, or separated from plans.</p>
+<p>There is a regular, recurring element to accessing a resource, as part of a larger subscription part of, or separated from plans. In addition to the regular usage, a subscription plan usually continues, and has costs associated with it even if there are no calls against the API made.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
