Updating journey/complete/elements-dedicated.html via Laneworks CMS Publish

--- a/journey/complete/elements-dedicated.html
+++ b/journey/complete/elements-dedicated.html
@@ -13,7 +13,7 @@ title: 'Dedicated'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Dedicated"}</p>
-<p>Resources can be allocated in a dedicated state, remaining available with no downtime, or according to SLA.</p>
+<p>Resources can be allocated in a dedicated state, remaining available with no downtime, or according to SLA. This element is complimentary to on-demand, and reserved instances, where the resources can be purchased on a dedicated bases. For many API resources dedicated will be the default state, and not worth mentioning unless on-demand, and other elements are available.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
