--- a/journey/complete/elements-archive.html
+++ b/journey/complete/elements-archive.html
@@ -13,7 +13,7 @@ title: 'Archive'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Archive"}</p>
-<p>Resources are in an archived state and require very little access, and can be stored in different manner.</p>
+<p>Resources are in an archived state and require very little access, and can be stored in different manner. Like infrequent, archive is mean for maybe one-time access, in future dates. Think of these levels as minimum rate limits, which base pricing not on volume, but only is cheap if minimum thresholds are met.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
