Updating journey/complete/elements-spot.html via Laneworks CMS Publish

--- a/journey/complete/elements-spot.html
+++ b/journey/complete/elements-spot.html
@@ -13,7 +13,7 @@ title: 'Spot'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Spot"}</p>
-<p>There is an opportunity to big on resources in a localized or distributed marketplace driven environment.</p>
+<p>There is an opportunity to big on resources in a localized or distributed marketplace driven environment. Maybe the demand for a resource changes from week, month, season or otherwise, and allowing for bidding can increase competition for a variety of API resources.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
