--- a/journey/complete/elements-infrequent.html
+++ b/journey/complete/elements-infrequent.html
@@ -13,7 +13,7 @@ title: 'Infrequent'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Infrequent"}</p>
-<p>Resources are accessed infrequently, treating them as warehoused, or off to the side.</p>
+<p>Resources are accessed infrequently, treating them as warehoused, or off to the side. Another side of the resource availability which focuses on these infrequent levels of access, and may allow a users access or plan shift from infrequent, to higher levels, if rate limits are exceeded.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
