Updating journey/complete/elements-volume.html via Laneworks CMS Publish

--- a/journey/complete/elements-volume.html
+++ b/journey/complete/elements-volume.html
@@ -13,7 +13,7 @@ title: 'Volume'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Volume"}</p>
-<p>Volume pricing levels are available, with plans based entirely on volume level access to resources.</p>
+<p>Volume pricing levels are available, with plans based entirely on volume level access to resources. Some platforms operate entirely on volume levels of API access, and levels should be crafted with end consumers in mind, and how they will be consumed, and at what levels.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
