Updating journey/complete/elements-reserved.html via Laneworks CMS Publish

--- a/journey/complete/elements-reserved.html
+++ b/journey/complete/elements-reserved.html
@@ -13,7 +13,7 @@ title: 'Reserved'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Reserved"}</p>
-<p>There are opportunities to reserve an instance of a resource or set of resources for specific time frames.</p>
+<p>There are opportunities to reserve an instance of a resource or set of resources for specific time frames. If the resources are also available on-demand, a complimentary reserved option should also be considered as part of planning operations.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
