--- a/journey/complete/elements-government.html
+++ b/journey/complete/elements-government.html
@@ -13,7 +13,7 @@ title: 'Government'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Government"}</p>
-<p>A set of API resources is available specifically for government access, meeting the specialized needs of local or federal government use.</p>
+<p>A set of API resources is available specifically for government access, meeting the specialized needs of local or federal government use. Complimentary to non-profit, and educational elements of access, government considerations are growing more common place for some API providers to offer. </p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
