Updating journey/complete/elements-commercial.html via Laneworks CMS Publish

--- a/journey/complete/elements-commercial.html
+++ b/journey/complete/elements-commercial.html
@@ -13,7 +13,7 @@ title: 'Commercial'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Commercial"}</p>
-<p>There is a commercial licensing element to a set of resources, which require additional business or legal requirements.</p>
+<p>There is a commercial licensing element to a set of resources, which require additional business or legal requirements. This element may not be cost associated, and just stipulate there are commercial opportunities around an API. These elements may require requesting access, or additional steps before they can become available.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
