--- a/journey/complete/elements-non-commercial.html
+++ b/journey/complete/elements-non-commercial.html
@@ -13,7 +13,7 @@ title: 'Non-Commercial'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Non-Commercial"}</p>
-<p>The platform allows for non-commercial access to resources, which usually means there is additional commercial requirements.</p>
+<p>The platform allows for non-commercial access to resources, which usually means there is additional commercial requirements. Allowing non-profit organizations, researchers, and other potential API consumers the ability to validate their identity, and achieve reduced, or free levels of access can benefit the overall platform reach, and potential marketing engine.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
