Updating journey/complete/elements-personal.html via Laneworks CMS Publish

--- a/journey/complete/elements-personal.html
+++ b/journey/complete/elements-personal.html
@@ -13,7 +13,7 @@ title: 'Personal'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Personal"}</p>
-<p>There is a personal element to a set of resources, meant for the casual user, and probably not developing an application or custom integration.</p>
+<p>There is a personal element to a set of resources, meant for the casual user, and probably not developing an application or custom integration. These elements of API access usually involve some way for access APIs for non-developers through API reciprocity services like Zapier, or API aggregation providers like Cloud Elements, and not meant for developers.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
