Updating journey/complete/elements-wholesale.html via Laneworks CMS Publish

--- a/journey/complete/elements-wholesale.html
+++ b/journey/complete/elements-wholesale.html
@@ -13,7 +13,7 @@ title: 'Wholesale'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Wholesale"}</p>
-<p>There are wholesale options around deploying and accessing resources that are available via a platform.</p>
+<p>There are wholesale options around deploying and accessing resources that are available via a platform. With cloud computing providers like AWS, Heroku, and Google, as well as virtualization technology like Docker, providing wholesale implementations of APIs are growing more possible, and are becoming more commonplace in API plans.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
