Updating journey/complete/elements-educational.html via Laneworks CMS Publish

--- a/journey/complete/elements-educational.html
+++ b/journey/complete/elements-educational.html
@@ -13,7 +13,7 @@ title: 'Educational'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Educational"}</p>
-<p>A platform provides considerations for K-12 or higher educational access to resources.</p>
+<p>A platform provides considerations for K-12 or higher educational access to resources. Like non-profit levels of access, education can benefit the overall platform reach, and benefit other marketing efforts. Reaching educational users, can lead to future individual, business, or institutional users, and improve the overall platform image.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
