Updating journey/complete/elements-features.html via Laneworks CMS Publish

--- a/journey/complete/elements-features.html
+++ b/journey/complete/elements-features.html
@@ -13,7 +13,7 @@ title: 'Features'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Features"}</p>
-<p></p>
+<p>Additional features, usually key / value pairs that can be used to describe addition elements of API access and consumption. The purpose of this research is to identify some of the common elements of how API providers plan their operations, and there will be a long tale of features that I do not capture--these are features.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
