Updating journey/complete/elements-partner.html via Laneworks CMS Publish

--- a/journey/complete/elements-partner.html
+++ b/journey/complete/elements-partner.html
@@ -13,7 +13,7 @@ title: 'Partner'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Partner"}</p>
-<p>There is a focus on partner access to resources, resulting in separate access layers, and features dedicated to partner level consumption.</p>
+<p>There is a focus on partner access to resources, resulting in separate access layers, and features dedicated to partner level consumption. While anyone accessing APIs can be considered a partner, these levels of access usually require much more vetting, making sure business objectives are in alignment, and legal obligations are met. Keeping partner access layers as transparent as possible helps keep harony with lower levels of public, or even internal API access.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
