Updating journey/complete/elements-internal.html via Laneworks CMS Publish

--- a/journey/complete/elements-internal.html
+++ b/journey/complete/elements-internal.html
@@ -13,7 +13,7 @@ title: 'Internal'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Internal"}</p>
-<p>A set of resources are tailored specifically for internal consumption rather than for public or partner level acess.</p>
+<p>A set of resources are tailored specifically for internal consumption rather than for public or partner level access. Internal APIs, like public ones will usually have a portal available at an Internet URL, but will require additional access before you can see anything related to the API.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
