--- a/journey/complete/elements-content.html
+++ b/journey/complete/elements-content.html
@@ -13,7 +13,7 @@ title: 'Content'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Content"}</p>
-<p>One of the primary objectives for API resources existing is in support of acquiring data and content that fuels platform operations.</p>
+<p>One of the primary objectives for API resources existing is in support of acquiring data and content that fuels platform operations. This is a very common element of successful API platforms that are operating today, such as Crunchbase or Angellist, or even Twitter and Tumblr. These are all examples of platforms where content acquisition is a core element of their API plans.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
