Updating journey/complete/elements-devices.html via Laneworks CMS Publish

--- a/journey/complete/elements-devices.html
+++ b/journey/complete/elements-devices.html
@@ -13,7 +13,7 @@ title: 'Devices'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Devices"}</p>
-<p></p>
+<p>Situations where APIs are available in support of devices. You can see examples of this with Fitbit or Nest, where they API is just value-add to the devices, allowing 3rd parties to develop applications, and put content or data to use that is generated around the API. This is the layer of the API space that is expanding to what is often called Internet of Things (IoT).</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
