--- a/journey/complete/elements-saas.html
+++ b/journey/complete/elements-saas.html
@@ -13,7 +13,7 @@ title: 'SaaS'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"SaaS"}</p>
-<p>Is the API operations secondary to a strong SaaS focus for a platform.</p>
+<p>Is the API operations secondary to a strong SaaS focus for a platform. How does an API add value to a SaaS offering? Considering the relationship between an API, and how it can benefit end-users of the platform is important to establishing a stable plan that can benefit both sides of the operation in harmony.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
