Updating journey/complete/elements-traffic.html via Laneworks CMS Publish

--- a/journey/complete/elements-traffic.html
+++ b/journey/complete/elements-traffic.html
@@ -13,7 +13,7 @@ title: 'Traffic'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Traffic"}</p>
-<p>Is a primary focus of an API platform centered around driving traffic to a web or mobile presence.</p>
+<p>Is a primary focus of an API platform centered around driving traffic to a web or mobile presence. If there is a solid business model around users accessing content or data, driving traffic through an API, without charging API consumers can be a successful approach.  How can API consumers be incentivized to drive more traffic to web and mobile properties, by extending the reach of the platform through APIs.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
