Updating journey/complete/elements-branding.html via Laneworks CMS Publish

--- a/journey/complete/elements-branding.html
+++ b/journey/complete/elements-branding.html
@@ -13,7 +13,7 @@ title: 'Branding'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Branding"}</p>
-<p>Is there a strong brand aspect to API operations, with clear guidelines, resources, and a presence for the companies brand.</p>
+<p>Is there a strong brand aspect to API operations, with clear guidelines, resources, and a presence for the companies brand. It is common to require API consumers to provide brand attribution on their site, and sometimes on web or mobile applications, as part of the API consumption contract. Branding should be reflected as an element for all public APIs, with details about different requirements for different plan levels.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
