--- a/journey/complete/elements-analytics.html
+++ b/journey/complete/elements-analytics.html
@@ -13,7 +13,7 @@ title: 'Analytics'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Analytics"}</p>
-<p>A set of API resources exist to gather, refine, and organize data for the purpose of driving analytics.</p>
+<p>A set of API resources exist to gather, refine, and organize data for the purpose of driving analytics. While these analytics might be also extended to API consumers, as well as end-users, one of the primary elements of API plans is to generate much needed data for use in analytics, increasing the value of a central, or even distribute resources.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
