Updating journey/complete/elements-security.html via Laneworks CMS Publish

--- a/journey/complete/elements-security.html
+++ b/journey/complete/elements-security.html
@@ -13,7 +13,7 @@ title: 'Security'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Security"}</p>
-<p>Access to API resources provide a security benefit, or are in support of other related security products and services.</p>
+<p>Access to API resources provide a security benefit, or are in support of other related security products and services. There should always be a base level of security to just keep a platform stable, but sometimes additional, or tighter security elements can be factored into the plan for overall platform operations. Security is an ever-increasing aspect of overall platform health and stability. </p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
