Updating journey/complete/elements-syndication.html via Laneworks CMS Publish

--- a/journey/complete/elements-syndication.html
+++ b/journey/complete/elements-syndication.html
@@ -13,7 +13,7 @@ title: 'Syndication'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Syndication"}</p>
-<p>API resources exist to encourage syndication of data, content, and other digital resources.</p>
+<p>API resources exist to encourage syndication of data, content, and other digital resources. How are APIs supporting the syndication of data and content to other public or private locations, something that may overlap with embeddedable aspects of API operations. APIs driven syndication can be seen in popular platforms like Twitter or Facebook.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
