--- a/journey/complete/elements-reporting.html
+++ b/journey/complete/elements-reporting.html
@@ -13,7 +13,7 @@ title: 'Reporting'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Reporting"}</p>
-<p>A set of API resources exist to gather, refine, and organize data for the purpose of driving reporting efforts.</p>
+<p>A set of API resources exist to gather, refine, and organize data for the purpose of driving reporting efforts. Analytics is the intelligence, and reports is the distribution model. Using APIs to drive static, or even dynamic reports that can be published, printed, or delivered via dashboards.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
