--- a/journey/complete/elements-services.html
+++ b/journey/complete/elements-services.html
@@ -13,7 +13,7 @@ title: 'Services'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Services"}</p>
-<p>API resources exist to support other related services, and act as value-add to the primary business focus.</p>
+<p>API resources exist to support other related services, and act as value-add to the primary business focus. This is somewhat duplicate to SaaS or PaaS elements, but more likely is about the delivery of classic services like Uber, TaskRabbit, and other sharing economy solutions are focused on today. How is an API driving the demand of other services, that may not be software based, and bridge into the physical world.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
