Updating journey/complete/elements-talent.html via Laneworks CMS Publish

--- a/journey/complete/elements-talent.html
+++ b/journey/complete/elements-talent.html
@@ -13,7 +13,7 @@ title: 'Talent'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Talent"}</p>
-<p>API resources are focused on driving talent acquisition, or even placement with ecosystem related companies or as part of wider services.</p>
+<p>API resources are focused on driving talent acquisition, or even placement with ecosystem related companies or as part of wider services. This could be in support of an actual recruitment platform, or could just be one aspect of what an API platform does to support talent needed internally, by partners, or even end-users of recruitment related services. </p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
