Updating journey/complete/elements-products.html via Laneworks CMS Publish

--- a/journey/complete/elements-products.html
+++ b/journey/complete/elements-products.html
@@ -13,7 +13,7 @@ title: 'Products'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Products"}</p>
-<p>An API primarily exists to support the existence, or drive the sales of another product, or product line.</p>
+<p>An API primarily exists to support the existence, or drive the sales of another product, or product line. I separate out devices from this grouping, because they require separate attention. This could describe entire supply chain integration using APIs, all the way to affiliate or reseller style systems like used by Amazon. There are a number of ways products can be sold, by putting APIs to work.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
