Updating journey/complete/elements-api.html via Laneworks CMS Publish

--- a/journey/complete/elements-api.html
+++ b/journey/complete/elements-api.html
@@ -13,7 +13,7 @@ title: 'API'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"API"}</p>
-<p>There are APIs available to access all or part of the plans, pricing, or limitations around an API platform operations.</p>
+<p>There are APIs available to access all or part of the plans, pricing, or limitations around an API platform operations. The API platforms I track on that have been around the longest, and are the most mature, have APIs for consumers to use, that gives access to plan information, rate limits, pricing, and other aspects of API operations. I include this as essential, because it will be something every API provider will need to complete in the future.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
