Updating journey/complete/elements-donations.html via Laneworks CMS Publish

--- a/journey/complete/elements-donations.html
+++ b/journey/complete/elements-donations.html
@@ -13,7 +13,7 @@ title: 'Donations'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Donations"}</p>
-<p>API resources allow for, or depend on donations as part of platform operations.</p>
+<p>API resources allow for, or depend on donations as part of platform operations. Not all APIs will be operating for profit, and will require donations for all, or part of the operational budget. These donations might be large, or they might be smaller from individual API consumers, or possibly end-user groups that benefit from an APIs existence.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
