--- a/journey/complete/elements-governance.html
+++ b/journey/complete/elements-governance.html
@@ -13,7 +13,7 @@ title: 'Governance'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Governance"}</p>
-<p>API resources are focused on governance related tasks within a company or possibly a wider industry.</p>
+<p>API resources are focused on governance related tasks within a company or possibly a wider industry. For APIs that operate in more heavily regulated spaces, governance will be a pretty big element of planning around APIs.  Governance can be applied across API operations, and subject to variability depending on plan levels and partner tiers of access.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
