Updating journey/complete/elements-terms-of-service.html via Laneworks CMS Publish

--- a/journey/complete/elements-terms-of-service.html
+++ b/journey/complete/elements-terms-of-service.html
@@ -13,7 +13,7 @@ title: 'Terms of Service'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Terms of Service"}</p>
-<p>API resources allow for the dynamic configuration of available terms of service that cover access and usage of resources.</p>
+<p>API resources allow for the dynamic configuration of available terms of service that cover access and usage of resources. Terms of service will play a key role in defining every element of platforms, so it makes sense that it can be a variable used across API planning decisions, and even allow for it to be part of different levels of plans, allowing TOS to play variable roles, depending on which plan you exist in.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
