Updating journey/complete/elements-grants.html via Laneworks CMS Publish

--- a/journey/complete/elements-grants.html
+++ b/journey/complete/elements-grants.html
@@ -13,7 +13,7 @@ title: 'Grants'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Grants"}</p>
-<p>API resources exist because of grant related resources, which pay for their design, deployment or operations.</p>
+<p>API resources exist because of grant related resources, which pay for their design, deployment or operations. Similar to donations, grants could be more formal funding opportunities for certain APIs that provide a civic or public good. Part of the goal in identifying this as a building block, is bringing more focus to the need of some APIs in this area, and drive more grant funding their way.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
