Updating journey/complete/elements-advertising.html via Laneworks CMS Publish

--- a/journey/complete/elements-advertising.html
+++ b/journey/complete/elements-advertising.html
@@ -13,7 +13,7 @@ title: 'Advertising'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Advertising"}</p>
-<p>API resources exist in support of advertising related elements of platform operations, driving advertising, or possibly alleviating the need for advertising to be present.</p>
+<p>API resources exist in support of advertising related elements of platform operations, driving advertising, or possibly alleviating the need for advertising to be present. The purpose of the APIs might be directly tied to advertising, or be more about helping drive traffic, or attention to resources that depend on advertising for their revenue. This element is focused on how advertising is coupled to API planning, no matter how tight it is.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
