--- a/journey/complete/timeframes.html
+++ b/journey/complete/timeframes.html
@@ -13,7 +13,7 @@ title: 'Timeframes'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Timeframes""}</p>
-<p></p>
+<p>The consumption of API resources is often measured within timeframes, in addition to the wide number of other metrics that can be applied. Having meaningful timeframes defined for evaluating how APIs are consumed, and using as part of overall planning, when it comes to all aspects, ranging from rate limits to billing.</p>
 <!-- Pagination links -->
 <div class="pagination">
 <a href="elements-customization.html" class="older"><< Prev</a>
