--- a/journey/complete/elements-organization.html
+++ b/journey/complete/elements-organization.html
@@ -13,7 +13,7 @@ title: 'Organization'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Organization"}</p>
-<p>There are organizational elements around API access and usage for API consumers to take advantage of.</p>
+<p>There are organizational elements around API access and usage for API consumers to take advantage of. Are API plans organized by organization, or possibly specific access only for a specific group. How does user organizations, groups, and other ways to categorize API consumption applied at the API planning level?</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
