--- a/journey/complete/timeframes-daily.html
+++ b/journey/complete/timeframes-daily.html
@@ -13,7 +13,7 @@ title: 'Daily'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Timeframes":"Daily"}</p>
-<p>Managing, guiding, and restricting plan entries in days.</p>
+<p>Managing, guiding, and restricting plan entries in days. Like seconds and minutes this is a common timeframe for considering rate limits, and judging the overall volume requirements of different users. Availability in seconds is often directly linked to compute resources being applied as part of operations, and tie in with overall availability. </p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
