--- a/journey/complete/elements-customization.html
+++ b/journey/complete/elements-customization.html
@@ -13,7 +13,7 @@ title: 'Customization'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Customization"}</p>
-<p>There are customization opportunities around API plans, pricing, and rate limits, giving more control to consumers to customize their experience.</p>
+<p>There are customization opportunities around API plans, pricing, and rate limits, giving more control to consumers to customize their experience. For many plans, things may be fixed, but as you go further up the chain, into enterprise and partner level tiers, there may be opportunities for customization of plan elements, where other users do not have the opportunity.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
