Updating journey/complete/timeframes-monthly.html via Laneworks CMS Publish

--- a/journey/complete/timeframes-monthly.html
+++ b/journey/complete/timeframes-monthly.html
@@ -13,7 +13,7 @@ title: 'Monthly'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Timeframes":"Monthly"}</p>
-<p>Managing, guiding, and restricting plan entries in months.</p>
+<p>Managing, guiding, and restricting plan entries in months. Like weekly, this timeframe is more used to organizing billing and support cycles, organizing resource usage and services rendered within the weekly time period, and aligning billing, and other aspects to this timeframe.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
