Updating journey/complete/timeframes-weekly.html via Laneworks CMS Publish

--- a/journey/complete/timeframes-weekly.html
+++ b/journey/complete/timeframes-weekly.html
@@ -13,7 +13,7 @@ title: 'Weekly'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Timeframes":"Weekly"}</p>
-<p>Managing, guiding, and restricting plan entries in weeks.</p>
+<p>Managing, guiding, and restricting plan entries in weeks. This timeframe is more used to organizing billing and support cycles, organizing resource usage and services rendered within the weekly time period, and aligning billing, and other aspects to this timeframe.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
