Updating journey/complete/timeframes-quarterly.html via Laneworks CMS Publish

--- a/journey/complete/timeframes-quarterly.html
+++ b/journey/complete/timeframes-quarterly.html
@@ -13,7 +13,7 @@ title: 'Quarterly'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Timeframes":"Quarterly"}</p>
-<p>Managing, guiding, and restricting plan entries in quarters.</p>
+<p>Managing, guiding, and restricting plan entries in quarters. Like monthly, and weekly, this timeframe is more used to organizing billing and support cycles, organizing resource usage and services rendered within the weekly time period, and aligning billing, and other aspects to this timeframe.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
