--- a/journey/complete/timeframes-annually.html
+++ b/journey/complete/timeframes-annually.html
@@ -13,7 +13,7 @@ title: 'Annually'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Timeframes":"Annually"}</p>
-<p>Managing, guiding, and restricting plan entries in years.</p>
+<p>Managing, guiding, and restricting plan entries in years.  Like quarterly, monthly, and weekly, this timeframe is more used to organizing billing and support cycles, organizing resource usage and services rendered within the weekly time period, and aligning billing, and other aspects to this timeframe.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
