Updating journey/complete/elements-type.html via Laneworks CMS Publish

--- a/journey/complete/elements-type.html
+++ b/journey/complete/elements-type.html
@@ -13,7 +13,7 @@ title: 'Type'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Type"}</p>
-<p>Are there custom types of plans available, with a grouping dimension that goes beyond just the available plans.</p>
+<p>Are there custom types of plans available, with a grouping dimension that goes beyond just the available plans. Thinking of plan types as a sort of categorization, allowing plans to be grouped by other dimensions, for more easily sharing with different groups. Think about separate between SaaS, developer, or possibly enterprise levels of access, and how plans can be organized by type.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
