--- a/journey/complete/elements-reseller.html
+++ b/journey/complete/elements-reseller.html
@@ -13,7 +13,7 @@ title: 'Reseller'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Reseller"}</p>
-<p>There are reseller opportunities in place around resources available via the platform.</p>
+<p>There are reseller opportunities in place around resources available via the platform, that allow approved API consumers to access resources, as well as resell access to resources. Resellers are paid a fixed amount, or possibly percentages of sales of products and services, which could include accessing and usage of API resources.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
