Updating journey/complete/timeframes-hourly.html via Laneworks CMS Publish

--- a/journey/complete/timeframes-hourly.html
+++ b/journey/complete/timeframes-hourly.html
@@ -13,7 +13,7 @@ title: 'Hourly'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Timeframes":"Hourly"}</p>
-<p>Managing, guiding, and restricting plan entries in hours.</p>
+<p>Managing, guiding, and restricting plan entries in hours. While there may be rate limits at the hourly level, this timeframe is more applied to resources that are on-demand and ephemeral, and can be consumed as needed, in a utility style that is becoming common way to plan API access.</p>
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
