Updating journey/complete/metrics.html via Laneworks CMS Publish

--- a/journey/complete/metrics.html
+++ b/journey/complete/metrics.html
@@ -12,7 +12,7 @@ title: 'Metrics'
 </td>
 </tr>
 </table>
-<p style="font-size: 22px; font-weight: bold;" align="center">{"Metrics""}</p>
+<p style="font-size: 22px; font-weight: bold;" align="center">{"Metrics"}</p>
 <p>Beyond the overall elements, and timeframes to consider, what are the specific metrics that are being applied to overall API operations, as well as individual plans and access tiers. Depending on the resource, there are a number of metrics being used across the API space, by leading API providers. This layer of the journey is meant to walk through the metrics you will want to consider in your API journey, allowing to cherry pick the ones that are most import to you. Not all metrics apply in all situations, but they are the building blocks of good API plans.</p>
 <!-- Pagination links -->
 <div class="pagination">
