Updating journey/complete/geo.html via Laneworks CMS Publish

--- a/journey/complete/geo.html
+++ b/journey/complete/geo.html
@@ -12,7 +12,7 @@ title: 'Geo'
 </td>
 </tr>
 </table>
-<p style="font-size: 22px; font-weight: bold;" align="center">{"Geo""}</p>
+<p style="font-size: 22px; font-weight: bold;" align="center">{"Geo"}</p>
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
