Updating journey/complete/resources.html via Laneworks CMS Publish

--- a/journey/complete/resources.html
+++ b/journey/complete/resources.html
@@ -12,7 +12,7 @@ title: 'Resources'
 </td>
 </tr>
 </table>
-<p style="font-size: 22px; font-weight: bold;" align="center">{"Resources""}</p>
+<p style="font-size: 22px; font-weight: bold;" align="center">{"Resources"}</p>
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
