Updating journey/complete/extensions.html via Laneworks CMS Publish

--- a/journey/complete/extensions.html
+++ b/journey/complete/extensions.html
@@ -12,7 +12,7 @@ title: 'Extensions'
 </td>
 </tr>
 </table>
-<p style="font-size: 22px; font-weight: bold;" align="center">{"Extensions""}</p>
+<p style="font-size: 22px; font-weight: bold;" align="center">{"Extensions"}</p>
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
