--- a/journey/complete/limits.html
+++ b/journey/complete/limits.html
@@ -12,7 +12,7 @@ title: 'Limits'
 </td>
 </tr>
 </table>
-<p style="font-size: 22px; font-weight: bold;" align="center">{"Limits""}</p>
+<p style="font-size: 22px; font-weight: bold;" align="center">{"Limits"}</p>
 <p></p>
 <!-- Pagination links -->
 <div class="pagination">
