Updating journey/complete/elements-commercial.html via Laneworks CMS Publish

--- a/journey/complete/elements-commercial.html
+++ b/journey/complete/elements-commercial.html
@@ -17,6 +17,11 @@ title: 'Commercial'
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
+<p><strong>Links</strong></p>
+<ul style="padding: 1px 0px 1px 25px;">
+<li><a href="https://angel.co/api/terms">AngelList</a> - AngelList requires you to talk to them before you use their API for commercial resources.</li>
+<li><a href="https://data.crunchbase.com/v3/page/accessing-the-dataset">Crunchbase</a> - Crunchbase requires you to talk to them before you use their API for commercial resources.</li>
+<li><a href="http://developer.echonest.com/licensing.html">The Echo Nest</a> - The Echo Nest asks you to talk to them before you use their API for commercial resources.</li>
 </ul>
 </ul>
 </ul>
