Updating journey/complete/elements-non-commercial.html via Laneworks CMS Publish

--- a/journey/complete/elements-non-commercial.html
+++ b/journey/complete/elements-non-commercial.html
@@ -17,6 +17,10 @@ title: 'Non-Commercial'
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
+<p><strong>Links</strong></p>
+<ul style="padding: 1px 0px 1px 25px;">
+<li><a href="https://data.crunchbase.com/v3/page/accessing-the-dataset">Crunchbase</a> - Crunchbase allows for confirmed non-commercial uses like academic research, student class projects, journalist / writer research, government agency analysis, and non-profit industry research.</li>
+<li><a href="http://products.wolframalpha.com/api/">Wolfram Alpha</a> - Wolfram Alphas free tier of access stipulates that you use for non-commercial purposes, giving immediate access up to 2000 non-commercial API calls per month.</li>
 </ul>
 </ul>
 </ul>
