Updating journey/complete/elements-trial.html via Laneworks CMS Publish

--- a/journey/complete/elements-trial.html
+++ b/journey/complete/elements-trial.html
@@ -17,6 +17,10 @@ title: 'Trial'
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
+<p><strong>Links</strong></p>
+<ul style="padding: 1px 0px 1px 25px;">
+<li><a href="https://www.filestack.com/pricing?fp=1">Filestack</a> - Filestack has a 10 day trial for their production tier, other than that is just developer or enterprise.</li>
+<li><a href="https://sendgrid.com/pricing">SendGrid</a> - Sendgrid gives you a 45 day trial to see how much volume you will send, and help you determine which tier you should be in.</li>
 </ul>
 </ul>
 </ul>
