Updating journey/complete/elements-demo.html via Laneworks CMS Publish

--- a/journey/complete/elements-demo.html
+++ b/journey/complete/elements-demo.html
@@ -17,6 +17,9 @@ title: 'Demo'
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
+<p><strong>Links</strong></p>
+<ul style="padding: 1px 0px 1px 25px;">
+<li><a href="http://www.3scale.net/pricing/">3Scale</a> - 3Scale has request a demo as an option for the enterprise tier, showing how demos around APIs and services something that can easily be woven into plans.</li>
 </ul>
 </ul>
 </ul>
